# BSSD-Core

./: .gitignore  README.md  pyproject.toml  setup.py
bssd/core/_base/: relation.py
src/bssd_core/_base/: relation.py
tests/: test_getters.py  test_inheritance.py  test_mutable_relation.py  test_relation.py  test_setters.py
